tests/fixtures/invalid/pow_str_dict_str.py
# Cannot call pow() with Str, Dict[str, int], Str
x = pow("hello", {"a": 1}, "hello")
